Add README.md and bios text to index.html

--- a/index.html
+++ b/index.html
@@ -43,28 +43,37 @@
       <div class="bio-card">
         <img src="imagenes/stencil_nach.png" alt="">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin neque leo, malesuada id dolor nec, tincidunt egestas dui. Sed semper eu nibh ac tincidunt. Curabitur nunc felis, finibus ut erat eget, facilisis efficitur nulla. Nullam non tellus mollis, semper ex non, ornare lacus.
+          Nacho Sanchez.<br>
+          Artista sonoro y gestor de proyectos.<br>
+          Su trabajo explora el campo de la creación colaborativa y el uso de tecnología como generadora de nuevas formas de composición e interpretación.
         </p>
       </div>
 
       <div class="bio-card">
         <img src="imagenes/stencil_ro.png" alt="">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin neque leo, malesuada id dolor nec, tincidunt egestas dui. Sed semper eu nibh ac tincidunt. Curabitur nunc felis, finibus ut erat eget, facilisis efficitur nulla. Nullam non tellus mollis, semper ex non, ornare lacus.
+          Rosario Murua.<br>
+          Arquitecta y artista visual.<br>
+          Especialista en morfología.<br>
+          Trabaja desde distintas disciplinas: el dibujo, los videos, el papel plegado y los espacios inmersivos.
         </p>
       </div>
 
       <div class="bio-card">
         <img src="imagenes/stencil_santi.png" alt="">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin neque leo, malesuada id dolor nec, tincidunt egestas dui. Sed semper eu nibh ac tincidunt. Curabitur nunc felis, finibus ut erat eget, facilisis efficitur nulla. Nullam non tellus mollis, semper ex non, ornare lacus.
+          Santiago Ocampo.<br>
+          Profesor de Bellas Artes y Programador.<br>
+          Especializado en el dibujo y autodidacta en el uso de tecnología.
         </p>
       </div>
 
       <div class="bio-card">
         <img src="imagenes/stencil_barbi.png" alt="">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin neque leo, malesuada id dolor nec, tincidunt egestas dui. Sed semper eu nibh ac tincidunt. Curabitur nunc felis, finibus ut erat eget, facilisis efficitur nulla. Nullam non tellus mollis, semper ex non, ornare lacus.
+          Bárbara Togander.<br>
+          Compositora, improvisadora y artista vocal.<br>
+          Incursiona en free, la música experimental y la improvisación libre, donde profundiza las posibilidades sonoras de la voz, la electrónica y la bandeja giradiscos. 
         </p>
       </div>
     </div>
