Hero section and Statement for mobile

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           Este proyecto cuenta con el apoyo de
         </p>
         <div class="statement-images">
-          <!-- <img src="imagenes/logo_fma_bn.png" alt="Logo Fondo Metropolitano">
-          <img src="imagenes/logo_impulsocultural.png" alt="Logo Impulso Cultural"> -->
+          <img class="img-fm" src="imagenes/logo_fm_bn.png" alt="Logo Fondo Metropolitano">
+          <img class="img-impulso" src="imagenes/logo_impulsocultural.png" alt="Logo Impulso Cultural">
         </div>
       </div>
     </div>
