Add bios section for mobile

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     </div>
 
     <!------------------- BIOS ------------------->
-    <!-- <div class="section section-bios">
+    <div class="section section-bios">
       <div class="bio-card">
         <img src="imagenes/stencil_nach.png" alt="">
         <p>
-          Nacho Sanchez.<br>
+          <span>Nacho Sanchez</span><br>
           Artista sonoro y gestor de proyectos.<br>
           Su trabajo explora el campo de la creación colaborativa y el uso de tecnología como generadora de nuevas formas de composición e interpretación.
         </p>
@@ -78,7 +78,7 @@
       <div class="bio-card">
         <img src="imagenes/stencil_ro.png" alt="">
         <p>
-          Rosario Murua.<br>
+          <span>Rosario Murua</span><br>
           Arquitecta y artista visual.<br>
           Especialista en morfología.<br>
           Trabaja desde distintas disciplinas: el dibujo, los videos, el papel plegado y los espacios inmersivos.
@@ -88,7 +88,7 @@
       <div class="bio-card">
         <img src="imagenes/stencil_santi.png" alt="">
         <p>
-          Santiago Ocampo.<br>
+          <span>Santiago Ocampo</span><br>
           Profesor de Bellas Artes y Programador.<br>
           Especializado en el dibujo y autodidacta en el uso de tecnología.
         </p>
@@ -97,12 +97,12 @@
       <div class="bio-card">
         <img src="imagenes/stencil_barbi.png" alt="">
         <p>
-          Bárbara Togander.<br>
+          <span>Bárbara Togander</span><br>
           Compositora, improvisadora y artista vocal.<br>
           Incursiona en free, la música experimental y la improvisación libre, donde profundiza las posibilidades sonoras de la voz, la electrónica y la bandeja giradiscos.
         </p>
       </div>
-    </div> -->
+    </div>
 
     <!------------------- GALERIA ------------------->
     <!-- <div class="section section-galeria">
