Add galery section for mobile

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <!------------------- GALERIA ------------------->
-    <!-- <div class="section section-galeria">
+    <div class="section section-galeria">
       <div class="galeria-top">
         <img src="imagenes/galeria/03.jpg" alt="">
         <img src="imagenes/galeria/04.jpg" alt="">
@@ -115,7 +115,7 @@
         <img src="imagenes/galeria/01.jpg" alt="">
         <img src="imagenes/galeria/02.jpg" alt="">
       </div>
-    </div> -->
+    </div>
 
   </body>
 </html>
