--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
       <nav>
-        <h1>Una Voz Interior</h1>
+        <a href="#">
+          <h1>Una Voz Interior</h1>
+        </a>
+
         <ul>
           <li>
-            <a href="#">Statement</a>
+            <a href="#statement">Statement</a>
           </li>
           <li>
-            <a href="#">Bios</a>
+            <a href="#bios">Bios</a>
           </li>
           <li>
-            <a href="#">Galería</a>
+            <a href="#galeria">Galería</a>
           </li>
         </ul>
       </nav>
@@ -47,12 +50,12 @@
     </div>
 
     <!------------------- STATEMENT ------------------->
-    <div class="section section-statement">
+    <div id="statement" class="section section-statement">
       <div class="statement-text">
         <p>
-          Una voz virtual es una pieza audiovisual inmersiva de realidad virtual con sonido binaural. La idea fundadora de esta propuesta es la de imaginar y desarrollar un experiencia que ubique al espectador en la convergencia de cuatro conjuntos, que a nuestro entender, constituyen la experiencia musical contemporánea: el evento sonoro, el espacio de escucha, las fuentes sonoras y la visualización del sonido.<br>
-          El desarrollo espacial dialoga con la construcción sonora: elementos volátiles, arcos lumminosos y cadenas montañosas giran alrededor del espectador en sincro con voces, coros y susurros. La organización concéntrica de elementos permite fortalecer el concepto inmersivo de la obra, mientras que la iluminación ambienta un clima lúgubre.
-          De manera individual o conjunta, los integrantes de este equipo han trabajado en proyectos que planteaban la misma búsqueda: espacios visibles, sonoros y habitables en los cuales la audiencia pudiera sumarse a una performance musical.<br>
+          Una voz virtual es una pieza audiovisual inmersiva de realidad virtual con sonido binaural. La idea fundadora de esta propuesta es la de imaginar y desarrollar un experiencia que ubique al espectador en la convergencia de cuatro conjuntos, que a nuestro entender, constituyen la experiencia musical contemporánea: el evento sonoro, el espacio de escucha, las fuentes sonoras y la visualización del sonido.<br><br>
+          El desarrollo espacial dialoga con la construcción sonora: elementos volátiles, arcos lumminosos y cadenas montañosas giran alrededor del espectador en sincro con voces, coros y susurros. La organización concéntrica de elementos permite fortalecer el concepto inmersivo de la obra, mientras que la iluminación ambienta un clima lúgubre.<br><br>
+          De manera individual o conjunta, los integrantes de este equipo han trabajado en proyectos que planteaban la misma búsqueda: espacios visibles, sonoros y habitables en los cuales la audiencia pudiera sumarse a una performance musical.<br><br>
           Una voz interior refleja la búsqueda de una espacialidad sonora íntima, distópica y fantástica.
           <br><br>
           Este proyecto cuenta con el apoyo de
@@ -65,7 +68,7 @@
     </div>
 
     <!------------------- BIOS ------------------->
-    <div class="section section-bios">
+    <div id="bios" class="section section-bios">
       <div class="bio-card">
         <img src="imagenes/stencil_nach.png" alt="">
         <p>
@@ -105,7 +108,7 @@
     </div>
 
     <!------------------- GALERIA ------------------->
-    <div class="section section-galeria">
+    <div id="galeria" class="section section-galeria">
       <div class="galeria-top">
         <img src="imagenes/galeria/03.jpg" alt="">
         <img src="imagenes/galeria/04.jpg" alt="">
