Replace hero img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!------------------- HEADER ------------------->
     <div class="hero-img">
-      <img src="imagenes/galeria/imagen_principal.jpg" alt="">
+      <img src="imagenes/hero_img.png" alt="">
     </div>
 
     <!------------------- STATEMENT ------------------->
