--- a/index.html
+++ b/index.html
@@ -44,9 +44,16 @@
       </label>
     </header>
 
-    <!------------------- HEADER ------------------->
+    <!------------------- HERO ------------------->
     <div class="hero-img">
       <img src="imagenes/hero_img.png" alt="">
+    </div>
+
+    <!------------------- VIDEO ------------------->
+    <div class="section-video">
+      <div class="video-wrapper">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3tjTrHKMI98" title="Una Voz Interior" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
     <!------------------- STATEMENT ------------------->
