Remove title from nav menu, fix stylings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Una Voz Interior</title>
+    <title>UVI - Una Voz Interior</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/reset.css">
@@ -20,13 +20,12 @@
     <!------------------- HEADER ------------------->
     <header>
 
+      <a href="#">
+        <h1>Una Voz Interior</h1>
+      </a>
+
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
-
       <nav>
-        <a href="#">
-          <h1>Una Voz Interior</h1>
-        </a>
-
         <ul>
           <li>
             <a href="#statement">Statement</a>
@@ -52,7 +51,7 @@
     <!------------------- VIDEO ------------------->
     <div class="section-video">
       <div class="video-wrapper">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3tjTrHKMI98" title="Una Voz Interior" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fDmGitU-qjw" title="UVI - Una Voz Interior" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
