Add hover effects for links and images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="statement" class="section section-statement">
       <div class="statement-text">
         <p>
-          Una voz virtual es una pieza audiovisual inmersiva de realidad virtual con sonido binaural. La idea fundadora de esta propuesta es la de imaginar y desarrollar un experiencia que ubique al espectador en la convergencia de cuatro conjuntos, que a nuestro entender, constituyen la experiencia musical contemporánea: el evento sonoro, el espacio de escucha, las fuentes sonoras y la visualización del sonido.<br><br>
+          Una Voz Interior es una pieza audiovisual inmersiva de realidad virtual con sonido binaural. La idea fundadora de esta propuesta es la de imaginar y desarrollar un experiencia que ubique al espectador en la convergencia de cuatro conjuntos, que a nuestro entender, constituyen la experiencia musical contemporánea: el evento sonoro, el espacio de escucha, las fuentes sonoras y la visualización del sonido.<br><br>
           El desarrollo espacial dialoga con la construcción sonora: elementos volátiles, arcos lumminosos y cadenas montañosas giran alrededor del espectador en sincro con voces, coros y susurros. La organización concéntrica de elementos permite fortalecer el concepto inmersivo de la obra, mientras que la iluminación ambienta un clima lúgubre.<br><br>
           De manera individual o conjunta, los integrantes de este equipo han trabajado en proyectos que planteaban la misma búsqueda: espacios visibles, sonoros y habitables en los cuales la audiencia pudiera sumarse a una performance musical.<br><br>
           Una voz interior refleja la búsqueda de una espacialidad sonora íntima, distópica y fantástica.
